# chat-with-bib

./: .env.example  .gitignore  Dockerfile  README.md  chat.py  compose.yaml  pyproject.toml
.chainlit/: config.toml
.devcontainer/: devcontainer.json
