[tool.poetry]
name = "chat-with-bib"
version = "0.1.0"
description = ""
authors = ["example <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.3"
redis = "^5.0.1"
faiss-cpu = "^1.7.4"
chainlit = "^0.7.700"
openai = "^1.3.6"
langchain = "^0.0.344"
tiktoken = "^0.5.1"
pybtex = "^0.24.0"
setuptools = "^69.0.2"
bibtexparser = {version = "^2.0.0b4", allow-prereleases = true}
pypdf = "^3.17.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
